List and edit users

--- a/ironylabeller/templates/dashboard.html
+++ b/ironylabeller/templates/dashboard.html
@@ -6,6 +6,7 @@
 
 <ul>
 	<li><a href="{{url_for(".add_labeller")}}">Agregar usuario</a></li>
+	<li><a href="{{url_for(".list_labellers")}}">Listar usuarios</a></li>
 <ul>
 
 {%endblock%}
