--- a/ironylabeller/templates/dashboard.html
+++ b/ironylabeller/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "default.html" %}
+{% extends "base.html" %}
 {% block title %}Bienvenido{% endblock %}
 
 {% block content %}
@@ -6,7 +6,8 @@
 
 <ul>
 	<li><a href="{{url_for(".add_labeller")}}">Agregar usuario</a></li>
-	<li><a href="{{url_for(".list_labellers")}}">Listar usuarios</a></li>
+	<li><a href="{{url_for(".list_labellers")}}">Listar etiquetadores</a></li>
+	<li><a href="{{url_for(".list_users")}}">Listar usuarios</a></li>
 <ul>
 
 {%endblock%}
