--- a/ironylabeller/templates/editlabeller.html
+++ b/ironylabeller/templates/editlabeller.html
@@ -1,35 +1,49 @@
-{% extends "default.html" %}
-
-{% macro render_field(field) %}
-  <dt>{{ field.label }}
-  <dd>{{ field(**kwargs)|safe }}
-  {% if field.errors %}
-    <ul class=errors>
-    {% for error in field.errors %}
-      <li>{{ error }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-  </dd>
-{% endmacro %}
-
+{% extends "base.html" %}
 
 {% block title %}Editar usuario{% endblock %}
 
 {% block content %}
+{% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
 <h1>Cambia la información del usuario</h1> 
 
-<form action={{url_for(".edit_labeller")}} method="POST" accept-charset="utf-8" enctype="multipart/form-data">
-    {{ form.csrf_token }}
-    {{ render_field(form.username)}}
-    {{ render_field(form.name)}}
-    {{ render_field(form.passwd)}}
-    {{ render_field(form.taskid)}}
-	{{ form.save() }}
-	{{ form.cancel() }}
+<form action='{{url_for(".edit_labeller",username=username)}}' action="" method="POST" novalidate formnovalidate class="form" role="form">
+    {{ form.hidden_tag() }}
+
+    {# Username or Email #}
+    {% set field = form.username if user_manager.enable_username else form.email %}
+    <div class="form-group {% if field.errors %}has-error{% endif %}">
+        {# Label on left, "Already registered? Sign in." on right #}
+        <div class="row">
+            <div class="large-6 columns">
+                <label for="{{ field.id }}" class="control-label">{{ field.label.text }}</label>
+            </div>
+            <div class="large-6 columns">
+                {% if user_manager.enable_register %}
+                    <a href="{{ url_for('user.login') }}" tabindex='290'>
+                        {%trans%}Already registered? Sign in.{%endtrans%}</a>
+                {% endif %}
+            </div>
+        </div>
+        {{ field(class_='form-control', tabindex=210) }}
+        {% if field.errors %}
+            {% for e in field.errors %}
+                <p class="help-block">{{ e }}</p>
+            {% endfor %}
+        {% endif %}
+    </div>
+
+    {% if user_manager.enable_email and user_manager.enable_username %}
+        {{ render_field(form.email, tabindex=220) }}
+    {% endif %}
+
+    {{ render_field(form.password, tabindex=230) }}
+    {{ render_field(form.name, tabindex=240) }}
+    {{ render_field(form.taskid, tabindex=250) }}
+    {{ render_field(form.roleids, tabindex=260) }}
+
+	{# Submit button #}
+	<input id="cancel" name="cancel" type="submit" class="button radius alert small" value="Cancelar"/>
+	<input type="submit" class="button radius small" value="Actualizar"/>
 </form>
 
-
-{%endblock%}
-
-
+{% endblock %}
