--- a/ironylabeller/templates/listlabellers.html
+++ b/ironylabeller/templates/listlabellers.html
@@ -1,17 +1,4 @@
-{% extends "default.html" %}
-
-{% macro render_field(field) %}
-  <dt>{{ field.label }}
-  <dd>{{ field(**kwargs)|safe }}
-  {% if field.errors %}
-    <ul class=errors>
-    {% for error in field.errors %}
-      <li>{{ error }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-  </dd>
-{% endmacro %}
+{% extends "base.html" %}
 
 
 {% block title %}Listar usuarions{% endblock %}
@@ -22,17 +9,24 @@
 <table>
   <thead>
     <tr>
+      <th>Usuario</th>
       <th with="400">Nombre</th>
+      <th>Task</th>
       <th>Acciones</th>
     </tr>
   </thead>
   <tbody>
-  {% for labeller in labellers %}
-	<td>{{labeller.name}}</td>
+  {% for user in users %}
+  	<tr>
+	<td>{{user.username}}</td>
+	<td>{{user.name}}</td>
+	<td>{{user.task.name}}</td>
     <td>
-		<a class="button round" href="{{url_for('.edit_labeller',username=labeller.username)}}">Editar</a>
+		{% if user.name %}
+		<a class="button round small" href="{{url_for('.edit_labeller',username=user.username)}}">Editar</a>
+		{% endif %}
 	</td>
-
+	</tr>
   {% endfor %}
 
   </tbody>
