--- a/ironylabeller/templates/login_user.html
+++ b/ironylabeller/templates/login_user.html
@@ -21,8 +21,8 @@
 
 <form action={{url_for(".login")}} method="POST" accept-charset="utf-8" enctype="multipart/form-data">
     {{ form.csrf_token }}
-    {{ render_field(form.admin)}}
-    {{ render_field(form.password)}}
+    {{ render_field(form.username)}}
+    {{ render_field(form.passwd)}}
 	{{ form.save() }}
 	{{ form.cancel() }}
 </form>
