--- a/ironylabeller/templates/base.html
+++ b/ironylabeller/templates/base.html
@@ -27,7 +27,7 @@
 	<ul class="title-area">
       <li class="name">
         <h1>
-          <a href="#">
+			<a href="">
             Irony labeller
           </a>
         </h1>
