--- a/ironylabeller/templates/listlabellers.html
+++ b/ironylabeller/templates/listlabellers.html
@@ -24,6 +24,7 @@
     <td>
 		{% if user.name %}
 		<a class="button round small" href="{{url_for('.edit_labeller',username=user.username)}}">Editar</a>
+		<a class="button round small" href="{{url_for('.info',username=user.username)}}">Info</a>
 		{% endif %}
 	</td>
 	</tr>
