--- a/ironylabeller/templates/label.html
+++ b/ironylabeller/templates/label.html
@@ -19,13 +19,13 @@
 <div class="row">
 <div class="large-6 large-centered columns">
 <div class="large-4 columns">
-    {{ render_field(form.containsImage) }}
+    {{ render_field(form.dependsImage) }}
 </div>
 <div class="large-4 columns">
-    {{ render_field(form.containsLink) }}
+    {{ render_field(form.dependsLink) }}
 </div>
 <div class="large-4 columns">
-    {{ render_field(form.retweet) }}
+    {{ render_field(form.dependsRetweet) }}
 </div>
 </div>
 </div>
