--- a/ironylabeller/templates/label.html
+++ b/ironylabeller/templates/label.html
@@ -15,7 +15,11 @@
 <br/>
 <br/>
 
+{% if doubt %}
 <form action="{{url_for('.index')}}" method="POST" class="form" role="form">
+{% else %}
+<form action="{{url_for('.doubts')}}" method="POST" class="form" role="form">
+{% endif %}
 <div class="row">
 <div class="large-6 large-centered columns">
 <div class="large-4 columns">
@@ -37,9 +41,11 @@
 <div class="large-2 large-offset-2 columns">
 	<input name="submit" type="submit" class="button radius alert" value="noironic"/>
 </div>
+{%if doubt %}
 <div class="large-2 large-offset-2 columns">
 	<input name="submit" type="submit" class="button radius" value="doubt"/>
 </div>
+{% endif %}
 </div>
 </div>
 </form>
