--- a/ironylabeller/templates/label.html
+++ b/ironylabeller/templates/label.html
@@ -36,7 +36,7 @@
 <div class="row">
 <div class="large-6 large-centered columns">
 <div class="large-2 columns">
-	<input name="submit" type="submit" class="button radius success" value="ironic"/>
+	<input name="submit" type="submit" class="button radius success" value="ironic" label="irónico"/>
 </div>
 <div class="large-2 large-offset-2 columns">
 	<input name="submit" type="submit" class="button radius alert" value="noironic"/>
