--- a/ironylabeller/templates/base.html
+++ b/ironylabeller/templates/base.html
@@ -16,6 +16,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/vendor/modernizr.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <title>{% block title %}{% endblock %} Irony labeller </title>
 
