--- a/ironylabeller/templates/label.html
+++ b/ironylabeller/templates/label.html
@@ -16,9 +16,9 @@
 <br/>
 
 {% if doubt %}
-<form action="{{url_for('.index')}}" method="POST" class="form" role="form">
+<form action="{{url_for('.index')}}" method="POST" class="form" role="form" id="form">
 {% else %}
-<form action="{{url_for('.doubts')}}" method="POST" class="form" role="form">
+<form action="{{url_for('.doubts')}}" method="POST" class="form" role="form" id="form">
 {% endif %}
 <div class="row">
 <div class="large-6 large-centered columns">
@@ -36,19 +36,61 @@
 <div class="row">
 <div class="large-6 large-centered columns">
 <div class="large-2 columns">
-	<input name="submit" type="submit" class="button radius success" value="ironic" label="irónico"/>
+	<input id="submit" name="submit" type="submit" class="button radius success" value="ironic" label="irónico"/>
 </div>
 <div class="large-2 large-offset-2 columns">
-	<input name="submit" type="submit" class="button radius alert" value="noironic"/>
+	<input  id="submit2" name="submit" type="submit" class="button radius alert" value="noironic"/>
 </div>
 {%if doubt %}
 <div class="large-2 large-offset-2 columns">
-	<input name="submit" type="submit" class="button radius" value="doubt"/>
+	<input id="submit3"  name="submit" type="submit" class="button radius" value="doubt"/>
 </div>
 {% endif %}
 </div>
 </div>
 </form>
+
+<script>
+$( window ).load(function() {
+	var timeStart = new Date();
+
+  $("#submit").on('click', function() {
+    var timeEnd = new Date();
+    var timeDiff = timeEnd - timeStart;
+	$("#form").submit( function(eventObj) {
+      $('<input />').attr('type', 'hidden')
+          .attr('name', "time")
+          .attr('value', timeDiff)
+          .appendTo('#form');
+      return true;
+  });	
+  });
+  $("#submit2").on('click', function() {
+    var timeEnd = new Date();
+    var timeDiff = timeEnd - timeStart;
+	$("#form").submit( function(eventObj) {
+      $('<input />').attr('type', 'hidden')
+          .attr('name', "time")
+          .attr('value', timeDiff)
+          .appendTo('#form');
+      return true;
+  });	
+  });
+  $("#submit3").on('click', function() {
+    var timeEnd = new Date();
+    var timeDiff = timeEnd - timeStart;
+	$("#form").submit( function(eventObj) {
+      $('<input />').attr('type', 'hidden')
+          .attr('name', "time")
+          .attr('value', timeDiff)
+          .appendTo('#form');
+      return true;
+  });	
+  });
+
+
+});
+</script>
 {%endblock%}
 
 
