--- a/ironylabeller/templates/latest.html
+++ b/ironylabeller/templates/latest.html
@@ -14,6 +14,7 @@
       <th>Irónico</th>
       <th>Duda</th>
       <th>Pendiente</th>
+      <th>Tiempo</th>
     </tr>
   </thead>
   <tbody>
@@ -35,6 +36,9 @@
 	{%else%}
 	No
 	{%endif%}
+	</td>
+	<td>
+	{{l.time}}
 	</td>
 
 	</tr>
